Added DragonDungeon class. Forgot to change branch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,5 @@ add_executable(dungeonGame
     ForestDungeon.cpp ForestDungeon.h
     PlainsDungeon.cpp PlainsDungeon.h
     CaveDungeon.cpp CaveDungeon.h
+    DragonDungeon.cpp DragonDungeon.h
 )
