--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,27 +10,27 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 # Add executable (include all cpp files here)
 
 # Automatically find all .cpp and .h files
-file(GLOB_RECURSE SOURCES "*.cpp" "*.h")
+# file(GLOB_RECURSE SOURCES "*.cpp" "*.h")
 
-# Exclude files in the CMakeFiles directory
-foreach(FILE ${SOURCES})
-    if(${FILE} MATCHES ".*/CMakeFiles/.*")
-        list(REMOVE_ITEM SOURCES ${FILE})
-    endif()
-endforeach()
+# # Exclude files in the CMakeFiles directory
+# foreach(FILE ${SOURCES})
+#     if(${FILE} MATCHES ".*/CMakeFiles/.*")
+#         list(REMOVE_ITEM SOURCES ${FILE})
+#     endif()
+# endforeach()
 
-# Add executable
-add_executable(dungeonGame ${SOURCES})
+# # Add executable
+# add_executable(dungeonGame ${SOURCES})
 
-# add_executable(dungeonGame
-#     main.cpp
-#     EnemyClasses/Enemy.cpp EnemyClasses/Enemy.h
-#     EnemyClasses/Enemies.h
-#     GameClass/Game.cpp GameClass/Game.h
-#     HeroClass/Hero.cpp HeroClass/Hero.h
-#     DungeonClasses/Dungeon.cpp DungeonClasses/Dungeon.h
-#     DungeonClasses/ForestDungeon.cpp DungeonClasses/ForestDungeon.h
-#     DungeonClasses/PlainsDungeon.cpp DungeonClasses/PlainsDungeon.h
-#     DungeonClasses/CaveDungeon.cpp DungeonClasses/CaveDungeon.h
-#     DungeonClasses/DragonDungeon.cpp DungeonClasses/DragonDungeon.h
-# )
+add_executable(dungeonGame
+    main.cpp
+    EnemyClasses/Enemy.cpp EnemyClasses/Enemy.h
+    EnemyClasses/Enemies.h
+    GameClass/Game.cpp GameClass/Game.h
+    HeroClass/Hero.cpp HeroClass/Hero.h
+    DungeonClasses/Dungeon.cpp DungeonClasses/Dungeon.h
+    DungeonClasses/ForestDungeon.cpp DungeonClasses/ForestDungeon.h
+    DungeonClasses/PlainsDungeon.cpp DungeonClasses/PlainsDungeon.h
+    DungeonClasses/CaveDungeon.cpp DungeonClasses/CaveDungeon.h
+    DungeonClasses/DragonDungeon.cpp DungeonClasses/DragonDungeon.h
+)
